@@ -1,7 +1,16 @@
 function placeNewTilesInPreviewData(obj,~,~)
-    % When new tiles are acquired they are placed into the correct location in
-    % the obj.previewImageData array. This is run when the tile position increments
-    % So it only runs once per X/Y position. 
+    % Place new tiles into the preview image 
+    %
+    %  function placeNewTilesInPreviewData(obj,~,~)
+    %
+    % Purpose
+    % This callback places newly acquired tiles into the preview image of the 
+    % BakingTray GUI. This method uses the property "previewTilePositions" to
+    % determine where to place the tiles and locates at those positions in the
+    % array which houses the preview section image data. This array can be 
+    % found: acquisition_view.previewImageData array.
+    % This callback is run when the tile position increments so that it only
+    % runs once per X/Y position.
 
     if obj.verbose
         fprintf('In acquisition_view.placeNewTilesInPreviewData callback\n')
@@ -26,11 +35,9 @@ function placeNewTilesInPreviewData(obj,~,~)
 
     if obj.model.lastTilePos.X>0 && obj.model.lastTilePos.Y>0
         % Caution changing these lines: tiles may be rectangular
-        %Where to place the tile
+        % Tiles are placed based upon the array "previewTilePositions" which is generated by initialisePreviewImageData
         y = (1:size(obj.model.downSampledTileBuffer,1)) + obj.previewTilePositions(obj.model.lastTileIndex,2);
         x = (1:size(obj.model.downSampledTileBuffer,2)) + obj.previewTilePositions(obj.model.lastTileIndex,1);
-
-        % NOTE: do not write to obj.model.downSampled tiles. Only the scanner should write to this.
 
         %Place the tiles into the full image grid so it can be plotted (there is a listener on this property to update the plot)
         obj.previewImageData(y,x,:,:) = obj.model.downSampledTileBuffer;
