@@ -18,11 +18,11 @@ function preAllocateTileBuffer(obj) %TODO: non-square images
     numPlanes = obj.recipe.mosaic.numOpticalPlanes;
 
     %calculate the number of lines per frame (in case of rectangular frames)
-    downsampleRatio = obj.downsamplePixPerLine / scnSet.pixelsPerLine;
-    downsampledLinesPerFrame = round(scnSet.linesPerFrame * downsampleRatio);
+    downsampleRatio = obj.downsampleMicronsPerPixel / scnSet.micronsPerPixel_rows;
 
-    obj.downSampledTileBuffer = zeros(downsampledLinesPerFrame, ...
-        obj.downsamplePixPerLine, ...
+    obj.downSampledTileBuffer = zeros(...
+        round(scnSet.linesPerFrame * downsampleRatio), ...
+        round(scnSet.pixelsPerLine * downsampleRatio), ...
         numPlanes, ...
         maxChans, ...
         'int16');
